[package]
name = "expenses-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
eframe = { version = "0.22.0", features = ["persistence"] }
egui = "0.22.0"
egui_extras = { version = "0.22.0", features = ["datepicker"] }
nanoid = "0.4.0"
rayon = "1.7.0"
serde = { version = "1.0.174", features = ["derive"] }
